data/derived/comb/progs/unify/prog5102.ml.out
Characters 90-93:
  | h::t  -> digitalRoot(sumList(n));;
                                ^^^
Error: This expression has type int but an expression was expected of type
         int list
